<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hide_install_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textview_fillet_back"
        android:text="@string/hide_install_test"
        android:textAlignment="center"
        android:textColor="#FFFFFFFF" />

    <LinearLayout
        android:id="@+id/hide_install_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hide_install_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_hide_install" />

        <Button
            android:id="@+id/hide_uninstall_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_hide_uninstall" />

        <Button
            android:id="@+id/install_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_install" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/uninstall_enable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/uninstall_enable_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uninstall_enable"/>

        <Button
            android:id="@+id/uninstall_disable_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/uninstall_disable"/>

    </LinearLayout>

</LinearLayout>